--- a/static/style/style.css
+++ b/static/style/style.css
@@ -5,10 +5,8 @@
     Description:
         Purpose of the stylesheet follows.
 */
-.contest-nav{
-    width: 60%;
-    margin: 18px auto !important;
-}
+
+/* navigation  */
 .problem-pagination{
     width: 200px;
     float: left;
@@ -21,4 +19,59 @@
 }
 .search-cat{
     width: 60px;
+}
+
+.contest-nav{
+    width: 60%;
+    margin: 0px auto !important;
+}
+
+/* content */
+
+.page-title{
+    text-align: center;
+    margin: 10px 0 !important;
+}
+.content-info{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.contest-info label{
+    font-family: serif;
+}
+
+#detail dt{
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+#detail dd{
+    margin: 1em 20px 1em;
+    font-size: 1.465em;
+    font-family: "minion-pro-1", "minion-pro-2", "Palatino", Georgia, "Times New Roman", serif;
+    line-height: 1.7em;
+}
+
+#fn-nav{
+    text-align: center;
+    font-size: 14px;
+    width: 250px;
+    margin: 0 auto 18px;
+}
+
+/*  footer  */
+#footer ul{
+    margin: 0;
+    text-align: center;
+}
+
+#footer ul li{
+    margin: 5px 10px;
+    display: inline;
+}
+
+#copyright{
+    width: 400px;
+    margin: 8px auto 13px;
 }
