--- a/static/style/style.css
+++ b/static/style/style.css
@@ -62,6 +62,10 @@
     text-align: center;
     margin: 10px 0 !important;
 }
+div.err-notice{
+    width: 300px;
+    margin: auto;
+}
 .content-info{
     /*font-size: 16px;*/
     text-align: center;
