add submit code

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -116,7 +116,7 @@ div.content-info p{
     position: relative;
     right: 10px;
 }
-.submit fieldset input{
+.submit fieldset input, .submit fieldset select{
     display: block;
     margin-bottom: 5px;
 }
