--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,24 @@ table.best-solution{
 .capitalize{
     text-transform: capitalize;
 }
+
+#edit-problem-list {
+    list-style: upper-alpha inside;
+    margin: 0;
+    padding: 0 0 30px 0;
+    width: 80%;
+}
+
+#edit-problem-list li {
+    margin: 0 3px 3px 3px;
+    padding: 0.4em 0.4em 0.4em 0.5em;
+    font-size: 1.4em;
+    height: 18px;
+    border: 1px solid #f4a460;
+    /*outline: 1px solid #f4a460;*/
+}
+
+#edit-problem-list li span {
+    position: absolute;
+    margin-left: -1.3em;
+}
