简单的邮件功能

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,11 @@ ul.summary li{
     text-align: center;
 }
 
+/* mail list */
+.mail-item .mail-title{
+    font-size: 20px;
+}
+
 /*  admin */
 .capitalize {
     text-transform: capitalize;
