some page improve

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 
 .page-title {
     text-align: center;
-    margin: 10px 0 !important;
+    margin: 10px 0 30px !important;
 }
 
 div.err-notice {
