--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,14 @@ ul.summary li {
 #fn-nav {
     text-align: center;
     font-size: 14px;
-    width: 100%;
-    max-width: 250px;
     margin: 0 auto 18px;
+}
+
+#fn-nav li {
+    float: none;
+    display: inline-block;
+    *display: inline; /* for ie7 */
+    *zoom: 1; /* for ie7 */
 }
 
 form.submit {
