--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ form.submit fieldset {
 
 form.submit textarea {
     display: block;
-    width: 590px;
+    width: 100%;
     height: 400px;
 }
 
